--- a/cs-engine/src/main/resources/application.properties
+++ b/cs-engine/src/main/resources/application.properties
@@ -2,6 +2,7 @@ db.name=CartellaStudente
 
 defaultLang=it
 
+apiToken=
 
 springfox.documentation.swagger.v2.path=/v2/api-docs
 swagger.title=Cartella Studente
