--- a/cs-engine/src/main/resources/application.properties
+++ b/cs-engine/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-db.name=CartellaStudente
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=CartellaStudente
 
 defaultLang=it
 
