--- a/cs-engine/src/main/resources/application.properties
+++ b/cs-engine/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=CartellaStudente
 
+server.port=8080
+server.contextPath=/cs-engine
+
 defaultLang=it
 
 apiToken=
