--- a/cs-engine/src/main/resources/application.properties
+++ b/cs-engine/src/main/resources/application.properties
@@ -2,10 +2,18 @@ spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=CartellaStudente
 
+spring.http.multipart.max-file-size=10240KB
+spring.http.multipart.max-request-size=10240KB
+
 server.port=8080
 server.contextPath=/cs-engine
 
 defaultLang=it
+
+#s3 bucket
+bucketName=cartellastudente
+#url expiration in minuts
+docUrlExpiration=60
 
 apiToken=
 
