--- a/frontend/studente/package.json
+++ b/frontend/studente/package.json
@@ -25,6 +25,7 @@
     "@ionic/storage": "2.0.1",
     "ionic-angular": "3.0.1",
     "ionicons": "3.0.0",
+    "ng2-order-pipe": "^0.1.4",
     "ng2-translate": "^5.0.0",
     "rxjs": "5.1.1",
     "sw-toolbox": "3.4.0",
