--- a/cs-engine/src/main/resources/application.properties
+++ b/cs-engine/src/main/resources/application.properties
@@ -10,6 +10,10 @@ server.contextPath=/cs-engine
 
 defaultLang=it
 
+profile.serverUrl=https://am-dev.smartcommunitylab.it/aac
+profile.account=adc
+profile.attribute=pat_attribute_codicefiscale
+
 #s3 bucket
 bucketName=cartellastudente
 #url expiration in minuts
