Profile Image, certifications

--- a/frontend/studente/src/assets/conf/config.production.json
+++ b/frontend/studente/src/assets/conf/config.production.json
@@ -1,4 +1,8 @@
 {
- "apiUrl": "/src/",
- "debugging": false
+  "apiUrl": "https://api-dev.smartcommunitylab.it/t/sco.cartella/cartella/1.0/api/",
+  "aacUrl": "https://am-dev.smartcommunitylab.it/aac",
+  "aacClientId": "fec507c3-f83c-4304-a93e-50020165c360",
+  "redirectUrl": "http://localhost:8100",
+  "debugging": true,
+  "token":"yeKESrRhwLfP791r"
 }
