--- a/frontend/studente/package.json
+++ b/frontend/studente/package.json
@@ -25,6 +25,7 @@
     "@ionic/storage": "2.0.1",
     "ionic-angular": "3.0.1",
     "ionicons": "3.0.0",
+    "leaflet": "^1.0.3",
     "ng2-file-upload": "^1.2.1",
     "ng2-order-pipe": "^0.1.4",
     "ng2-translate": "^5.0.0",
