engine: pom and properties

--- a/cs-engine/src/main/resources/application.properties
+++ b/cs-engine/src/main/resources/application.properties
@@ -10,9 +10,18 @@ server.contextPath=/cs-engine
 
 defaultLang=it
 
-profile.serverUrl=https://am-dev.smartcommunitylab.it/aac
+oauth.serverUrl=https://am-dev.smartcommunitylab.it/aac
+
+profile.serverUrl=https://api-dev.smartcommunitylab.it/aac/1.0.0
 profile.account=adc
 profile.attribute=pat_attribute_codicefiscale
+
+authorization.serverUrl=https://api-dev.smartcommunitylab.it/aacauthorization/1.0.0
+authorization.clientId=
+authorization.clientSecret=
+authorization.domain=cartellastudente
+authorization.userType=user
+
 
 #s3 bucket
 bucketName=cartellastudente
