--- a/cs-engine/pom.xml
+++ b/cs-engine/pom.xml
@@ -116,12 +116,6 @@
 			<version>2.0.0</version>
 		</dependency>
 
-		<dependency>
-			<groupId>eu.trentorise.smartcampus</groupId>
-			<artifactId>profileservice.client</artifactId>
-			<version>2.1</version>
-		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -130,6 +124,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
+			
 			<plugin>
 				<inherited>false</inherited>
 				<groupId>com.mycila.maven-license-plugin</groupId>
