--- a/frontend/studente/src/assets/conf/config.development.json
+++ b/frontend/studente/src/assets/conf/config.development.json
@@ -1,6 +1,9 @@
 {
-  "apiUrl": "https://dev.smartcommunitylab.it/cs-engine/api/",
+  "apiUrl": "http://192.168.42.60:9090/cs-engine/api/",
   "aacUrl": "https://am-dev.smartcommunitylab.it/aac",
+  "geocoderUrl":"https://os.smartcommunitylab.it/core.geocoder/",
+  "mapPositionAutocomplete":[46.069672,11.121270],
+  "distanceAutocomplete":25,
   "aacClientId": "fec507c3-f83c-4304-a93e-50020165c360",
   "redirectUrl": "http://localhost:8100",
   "debugging": true,
