--- a/frontend/studente/package.json
+++ b/frontend/studente/package.json
@@ -23,6 +23,8 @@
     "@ionic-native/splash-screen": "3.4.2",
     "@ionic-native/status-bar": "3.4.2",
     "@ionic/storage": "2.0.1",
+    "@types/file-saver": "0.0.1",
+    "file-saver": "^1.3.3",
     "ionic-angular": "3.0.1",
     "ionicons": "3.0.0",
     "leaflet": "^1.0.3",
