--- a/frontend/studente/package.json
+++ b/frontend/studente/package.json
@@ -26,6 +26,7 @@
     "@types/file-saver": "0.0.1",
     "file-saver": "^1.3.3",
     "ionic-angular": "3.0.1",
+    "ionic2-date-picker": "^1.0.7",
     "ionicons": "3.0.0",
     "leaflet": "^1.0.3",
     "ng2-file-upload": "^1.2.1",
