Added property for import year.

--- a/cs-engine/src/main/resources/application.properties
+++ b/cs-engine/src/main/resources/application.properties
@@ -30,6 +30,7 @@ docUrlExpiration=60
 
 infotn.source.folder=
 infotn.api.url=https://webservices-test.infotn.it/RegistroEsterni
+infotn.starting.year=2016
 
 apiToken=
 
