Added course meta info repository + basic auth credentials handling

--- a/cs-engine/src/main/resources/application.properties
+++ b/cs-engine/src/main/resources/application.properties
@@ -30,7 +30,9 @@ docUrlExpiration=60
 
 infotn.source.folder=
 infotn.api.url=https://webservices-test.infotn.it/RegistroEsterni
-infotn.starting.year=2016
+infotn.starting.year=2017
+infotn.api.user=
+infotn.api.pass=
 
 apiToken=
 
