--- a/cs-engine/src/main/resources/application.properties
+++ b/cs-engine/src/main/resources/application.properties
@@ -36,6 +36,8 @@ infotn.api.pass=
 
 apiToken=
 
+google.api.key=
+
 springfox.documentation.swagger.v2.path=/v2/api-docs
 swagger.title=Cartella Studente
 swagger.desc=description here
