Added local storage proprierties.

--- a/cs-engine/src/main/resources/application.properties
+++ b/cs-engine/src/main/resources/application.properties
@@ -23,10 +23,9 @@ authorization.domain=cartellastudente
 authorization.userType=user
 
 
-#s3 bucket
-bucketName=cartellastudente
-#url expiration in minuts
 docUrlExpiration=60
+encrypt.key=
+storage.local.dir=
 
 infotn.source.folder=
 infotn.api.url=https://webservices-test.infotn.it/RegistroEsterni
