import aziende with merge data from Parix

--- a/cs-engine/src/main/resources/application.properties
+++ b/cs-engine/src/main/resources/application.properties
@@ -28,10 +28,16 @@ encrypt.key=
 storage.local.dir=
 
 infotn.source.folder=
-infotn.api.url=https://webservices-test.infotn.it/RegistroEsterni
+infotn.api.url=
 infotn.starting.year=2017
 infotn.api.user=
 infotn.api.pass=
+
+infotn.parix.endpoint=
+infotn.parix.keystore=
+infotn.parix.keystore.password=
+infotn.parix.user=
+infotn.parix.password=
 
 apiToken=
 
