--- a/cs-engine/src/main/resources/application.properties
+++ b/cs-engine/src/main/resources/application.properties
@@ -51,3 +51,7 @@ swagger.tos.url=
 swagger.contact=info@smartcommunity.it
 swagger.license=Apache License, Version 2.0
 swagger.license.url=http://www.apache.org/licenses/LICENSE-2.0
+
+management.security.enabled=false
+management.port=6011
+management.context-path=/manage
